# unit_converter

./: README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yaml
src/: config.py  conversion_strategy.py  forms.py  main.py  operations.py
static/css/: style.css
templates/: base.html  home.html  index.html
tests/: conftest.py  test_conversion_strategy  test_conversion_strategy.py  test_forms.py  test_operations.py
